--- a/RaspberryWebTerminal/RaspberryWebTerminal.csproj
+++ b/RaspberryWebTerminal/RaspberryWebTerminal.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="SharpDX.DirectInput" Version="4.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
