--- a/RaspberryWebTerminal/RaspberryWebTerminal.csproj
+++ b/RaspberryWebTerminal/RaspberryWebTerminal.csproj
@@ -5,8 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AForge.Video" Version="2.2.5" />
+        <PackageReference Include="AForge.Video.DirectShow" Version="2.2.5" />
         <PackageReference Include="SharpDX.DirectInput" Version="4.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="System.Drawing.Common" Version="6.0.0-preview.5.21301.5" />
     </ItemGroup>
 
 </Project>
